@@ -1,0 +1,14 @@
+<?php
+
+/**
+ * @version		$Id$
+ * @package		Document
+ * @subpackage	Component
+ * @copyright	Copyright (C) 2010 - today Master ICONE, University of La Rochelle, France.
+ * @link		http://joomlacode.org/gf/project/document/
+ * @license		License GNU General Public License version 2 or later
+ */
+
+// No direct access to this file
+defined('_JEXEC') or die('Restricted access');
+
