@@ -1,0 +1,31 @@
+<?php
+
+/**
+ * @version		$Id$
+ * @package		Document
+ * @subpackage	Component
+ * @copyright	Copyright (C) 2010 - today Master ICONE, University of La Rochelle, France.
+ * @link		http://joomlacode.org/gf/project/document/
+ * @license		License GNU General Public License version 2 or later
+ */
+
+// No direct access to this file
+defined('_JEXEC') or die('Restricted access');
+
+// import Joomla view library
+jimport('joomla.application.component.view');
+
+/**
+ * Upload View of Document component
+ */
+class DocumentViewUpload extends JView
+{
+	/**
+	 * Document view display method
+	 */
+	public function display($tpl = null) 
+	{
+		// Display the template
+		parent::display($tpl);
+	}
+}
